# rs-backend

./: Cargo.toml  README.md  database.db  rust.yml
.github/workflows/: rust.yml
src/: database.db  handlers.rs  main.rs  models.rs  routes.rs
tests/: handlers_test.rs
