[package]
name = "rs-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.6", features = ["sqlite", "runtime-actix-native-tls", "macros"] }
sea-query = "0.23"
actix-web = "4"
actix-rt = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"

[dev-dependencies]
actix-rt = "2"
tokio = { version = "1", features = ["full"] }